RESOLVED FIXED212072
AVVideoCaptureSource should notify of video samples in a background thread
https://bugs.webkit.org/show_bug.cgi?id=212072
Summary AVVideoCaptureSource should notify of video samples in a background thread
youenn fablet
Reported 2020-05-19 07:21:59 PDT
AVVideoCaptureSource should notify of video samples in a background thread
Attachments
Patch (3.12 KB, patch)
2020-05-19 07:41 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-05-19 07:41:18 PDT
Eric Carlson
Comment 2 2020-05-19 09:58:07 PDT
Comment on attachment 399734 [details] Patch Nice!
EWS
Comment 3 2020-05-25 06:34:53 PDT
Committed r262122: <https://trac.webkit.org/changeset/262122> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399734 [details].
Radar WebKit Bug Importer
Comment 4 2020-05-25 06:35:21 PDT
Note You need to log in before you can comment on or make changes to this bug.