AVVideoCaptureSource should notify of video samples in a background thread https://bugs.webkit.org/show_bug.cgi?id=212072

Reviewed by Eric Carlson.

Do not hop to the main thread to send samples.
Instead, directly call the observer callback.
Manually tested.

* platform/mediastream/mac/AVVideoCaptureSource.h:
* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::captureOutputDidOutputSampleBufferFromConnection):


Canonical link: https://commits.webkit.org/225185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262122 268f45cc-cd09-0410-ab3c-d52691b4dbfc